tests/paczka1/small_fuzzy/92256166.err
Error in line 10: Q33Jo A0 27,0
Error in line 16: Q33Jo A505 4,45
